--- a/NonConditional/Preconditions/Transition.tex
+++ b/NonConditional/Preconditions/Transition.tex
@@ -4,8 +4,8 @@
 \subsubsection*{Action success}
 When an action $a$ applied to a state $s$ yields a state different from $s$ (such that $\gamma (s, a) \neq s$), then the action application was successful, and none of $A$'s preconditions were violated by $s$, meaning that
 
-        \[ g\left[P^+\right] \subseteq s_t \land
-            g\left[P^-\right] \subseteq \mathbb{P} \setminus s_t
+        \[ g\left[Pre^+\right] \subseteq s_t \land
+            g\left[Pre^-\right] \subseteq \mathbb{P} \setminus s_t
         \]
 ie. the grounding of any positive precondition will yield a predicate in $s$, and the grounding of any negative precondition yields a predicate which is not in $s$.
 It follows trivially that any predicate $p \in \mathbb{P}$ for which $g(p) \notin s_t$ can not be a positive precondition, as that would have caused the action to fail. Similarly, if $g(p) \in s_t$, then $p$ can not be a negative precondition. The sets of ungrounded predicates that can be disproven to be positive (resp. negative) preconditions are thus:
@@ -53,7 +53,7 @@ As a convienence, $d(s)$ denotes the union of $d^+(s)$ and $d^-(s)$, where predi
 \end{example}
 
 \subsubsection*{Action failure}
-In case of action failure, at least one of $A$'s preconditions were not satisfied by $s$, but there is no indication from the environment on which predicate(s) violated a precondition by their presence in or absence from $s$. However, it is certain that either a negative precondition was violated by a predicate $p \in s$, or a positive precondition was violated by a predicate absent from $s$. The predicates that would have caused the failure if part of $P^+$ (resp. $P^-$) are called the positive (resp. negative) candidates and can be determined as follows:
+In case of action failure, at least one of $A$'s preconditions were not satisfied by $s$, but there is no indication from the environment on which predicate(s) violated a precondition by their presence in or absence from $s$. However, it is certain that either a negative precondition was violated by a predicate $p \in s$, or a positive precondition was violated by a predicate absent from $s$. The predicates that would have caused the failure if part of $Pre^+$ (resp. $Pre^-$) are called the positive (resp. negative) candidates and can be determined as follows:
 
 \begin{equation} \label{eq:cPlus}
     c^+(s) = \left\{ x \; | \; x \in \mathbb{P} \land g(x) \notin s \right\}
@@ -71,7 +71,7 @@ As for disproven candidates, $c(s)$ denotes the union of $c^+(s)$ and $c^-(s)$ w
 Since the action failed, it holds trivially that \textit{some} predicates in $c^+(s)$ or $c^-(s)$ (or both) are preconditions, ie.
 
 \begin{equation} \label{eq:inv}
-    \left| c(s) \cap P \right| \geq 1
+    \left| c(s) \cap Pre \right| \geq 1
 \end{equation}
 
 This is an important invariant; if the sets $c^+$ and $c^-$ can be reduced such that only one predicate remain in $c^+ \cup c^-$ while \eqref{eq:inv} is maintained, then that predicate is proven to be a precondition (negative or positive, depending on whether it was a member of $c^+$ or $c^-$). Formally,
@@ -136,29 +136,29 @@ It is clear that if a predicate is disproven to be a precondition, then it can n
 \end{example}
 
 While predicates disproven to be preconditions can sefely be removed from the candidate sets, the same does not hold for predicates \emph{proven} to be preconditions:
-If a predicate $p \in c(s)$ is \textit{proven} to be a precondition, then its removal from $c(s)$ could violate \eqref{eq:inv}: If $p$ is the only predicate in $c(s)$ that is a precondition, (such that $c(s) \cap P = \{ p \}$), then
+If a predicate $p \in c(s)$ is \textit{proven} to be a precondition, then its removal from $c(s)$ could violate \eqref{eq:inv}: If $p$ is the only predicate in $c(s)$ that is a precondition, (such that $c(s) \cap Pre = \{ p \}$), then
 \begin{equation*}
-    \left| c(s) \cap P \right| = 0
+    \left| c(s) \cap Pre \right| = 0
 \end{equation*}
 
 As a consequence, if $c(s)$ contains more than one precondition, ie. if
 
 \begin{equation*}
-    \left| c(s) \cap P \right| > 1,
+    \left| c(s) \cap Pre \right| > 1,
 \end{equation*}
 
 then $c(s)$ can never be reduced to a singleton set without violating \eqref{eq:inv}. Furthermore, a candidate set containing a predicate proven to be a precondition can never yield more knowledge: If $p$ is retained in $c$, then one of the following cases apply:
 \begin{itemize}
-    \item $c \cap P = \{ p \}$, ie. $p$ is the only predicate in $c$ that is a precondition. Then $c$ could eventually be reduced to the singleton set $\{ p \}$, which does not produce any new knowledge, since $p$ is already known to be a precondition.
+    \item $c \cap Pre = \{ p \}$, ie. $p$ is the only predicate in $c$ that is a precondition. Then $c$ could eventually be reduced to the singleton set $\{ p \}$, which does not produce any new knowledge, since $p$ is already known to be a precondition.
 
-    \item $c \cap P > 1$, ie. more than two predicates in $c$ are preconditions of $A$. As mentioned above, $c$ can never be reduced to the singleton set, and no more knowledge can be gained from it.
+    \item $c \cap Pre > 1$, ie. more than two predicates in $c$ are preconditions of $A$. As mentioned above, $c$ can never be reduced to the singleton set, and no more knowledge can be gained from it.
 \end{itemize}
-In both cases, retaining the set $c$ as it is will not provide any new knowledge. Thus, a candidate set can be discarded when one of its members are proven to be present in $P^{\pm}$. See example \ref{ex:undisc} for an demonstration of this problem.
+In both cases, retaining the set $c$ as it is will not provide any new knowledge. Thus, a candidate set can be discarded when one of its members are proven to be present in $Pre^{\pm}$. See example \ref{ex:undisc} for an demonstration of this problem.
 
 \begin{example}[Undiscoverable knowledge] \label{ex:undisc}
     We will now illustrate how the precondition specifying that two tiles must be adjacent for the sokoban to move between them can never be dsicovered.
 
-    If the agent tries to execute the action $\texttt{move-h}(t_3, t_1)$, it will once again find that the application was unsuccessful, since it is required that the destination tile is horizontally adjacent to the source tile. In this case, the set of positive candidates $c^+(s_1)$ will contain both $\texttt{hAdj}(from, to)$ and $\texttt{hAdj}(to, from)$. Since these are not in $d^+(s_0)$ (from example \ref{ex:moveSucceeded}), the candidates can not be reduced to a singleton set. Furthermore, because of the symmetry of the two predicates, the one will never appear in a state without the other, and if one of them is absent from a state, so is the other. Although $P^+$ only contains $\texttt{hAdj}(to, from)$, $\texttt{hAdj}(from, to)$ is an implicit precondition; if is violated in a state, so is $\texttt{hAdj}(from, to)$.
+    If the agent tries to execute the action $\texttt{move-h}(t_3, t_1)$, it will once again find that the application was unsuccessful, since it is required that the destination tile is horizontally adjacent to the source tile. In this case, the set of positive candidates $c^+(s_1)$ will contain both $\texttt{hAdj}(from, to)$ and $\texttt{hAdj}(to, from)$. Since these are not in $d^+(s_0)$ (from example \ref{ex:moveSucceeded}), the candidates can not be reduced to a singleton set. Furthermore, because of the symmetry of the two predicates, the one will never appear in a state without the other, and if one of them is absent from a state, so is the other. Although $Pre^+$ only contains $\texttt{hAdj}(to, from)$, $\texttt{hAdj}(from, to)$ is an implicit precondition; if is violated in a state, so is $\texttt{hAdj}(from, to)$.
 
     A consequence of this is that when the adjacency precondition is violated, the candidate set will always contain at least two preconditions, and can as such never be reduced to a singleton set.
 
