* Added extra text to hyper graph section * Minor fixes

--- a/Conditional.tex
+++ b/Conditional.tex
@@ -1,13 +1,13 @@
 \documentclass[Master.tex]{subfiles}
 \begin{document}
 
-\section{What is condition effects}
+\section{Introduction to conditional effects}
     \subfile{Conditional/WhatIsConditionalEffects}
 
-\section{Difficulities learning condition effects}
+\section{Learning conditional effects}
     \subfile{Conditional/DifficulitiesLearningConditionEffects}
 
-\section{Explain our models}
+\section{Hypergraph introduction}
     \subfile{Conditional/ExplainOurModels}
 
 \section{Hyper graph construction from state}
