--- a/NonConditional/Preconditions/PriorKnowledge.tex
+++ b/NonConditional/Preconditions/PriorKnowledge.tex
@@ -1,29 +1,29 @@
 \documentclass[../../Master.tex]{subfiles}
 \begin{document}
 
-We will now present an algorithm (see algorithm \ref{algo:precondLearn}) for obtaining knowledge about preconditions from a series of state transitions. The algorithm takes as input a state transition $(s, a, s')$ as well as prior knowledge about the action schema for $a$, consisting of the following:
+We will now present an algorithm (see algorithm~\ref{algo:precondLearn}) for obtaining knowledge about preconditions from a series of state transitions. The algorithm takes as input a state transition $(s, a, s')$ as well as prior knowledge about the action schema for $a$, consisting of the following:
 
 \begin{itemize}
-    \item Sets $K^+$ and $K^-$, containing the ungrounded predicates that have previously been proven to be positive and negative preconditions, respectively.
-    \item Sets $D^+$ and $D^-$, containing the ungrounded predicates that have previously been proven to \textit{not} be positive and negative preconditions, respectively.
-    \item A set $C$ containing candidate sets of the form $\left(c^+, c^- \right)$, where each candidate set satisfies the invariant in \eqref{eq:inv}.
+    \item A set $K$ containing fluent predicates proven to be prconditions.
+	\item A set $D$ containing fluent predicates \emph{disproven} to be preconditions.
+    \item A set $C$ containing candidate sets, each satisfying the invariant in~\eqref{eq:inv}.
 \end{itemize}
 
-On action success, the sets of predicates that can be disproven to be preconditions based on this transition is calculated using \eqref{eq:DPlusTrans} and \eqref{eq:DMinusTrans}, and added to the existing knowledge:
+On action success, the sets of predicates that can be disproven to be preconditions based on this transition is calculated using~\eqref{eq:DPlusTrans} and~\eqref{eq:DMinusTrans}, and added to the existing knowledge:
 
 \begin{equation*}
     D = D \cup d^+(s)\}
 \end{equation*}
 
-On action failure, the candidate sets are determined using \eqref{eq:cPlus} and \eqref{eq:cMinus}, and are added to the set $C$.
+On action failure, the candidate sets are determined using~\eqref{eq:cPlus} and~\eqref{eq:cMinus}, and are added to the set $C$.
 
-It now holds that either more predicates have been disproven, or one more candidate set have been added to $C$. According to theorem \ref{th:invHolds}, each candidate set in $C$ can now be reduced by removing disproven predicates, while maintaining invariant \eqref{eq:inv}:
+It now holds that either more predicates have been disproven, or one more candidate set have been added to $C$. According to Theorem~\ref{th:invHolds}, each candidate set in $C$ can now be reduced by removing disproven predicates, while maintaining Invariant~\eqref{eq:inv}:
 
 \begin{equation} \label{reduceCands}
     C = \left\{ c \setminus D \; | \; c \in C \right\}
 \end{equation}
 
-By Proposition \ref{prop:ncp:precond-holds}, members of any singleton candidate set can now be added to the proven knowledge:
+By Proposition~\ref{prop:ncp:precond-holds}, members of any singleton candidate set can now be added to the proven knowledge:
 
 \begin{equation} \label{eq:extractKnown}
     K = K \cup \left\{ p \; | \; \{ p \} \in C \right\}
@@ -35,13 +35,11 @@ As discussed previously, any candidate set containing a predicate which have alr
     C = \left\{ c \; | \; c \in C \land c \cap K \neq \emptyset \right\}
 \end{equation}
 
-\begin{algorithm}
+\begin{algorithm}\label{algo:precondLearn}
     \caption{Algorithm for learning preconditions}
-    \label{algo:precondLearn}
 
     \begin{algorithmic}
         \Function {$\textsc{Precond-learn}$} {$\left( s, a, s'\right)$, $D$, $K$, $C$}
-            \State \Require <Write arguments>
             \If {$s' \neq s$}
                 \State $C \gets C \cup \{ c(s) \}$
             \ElsIf {$s' = s$}
@@ -51,7 +49,7 @@ As discussed previously, any candidate set containing a predicate which have alr
             \State Reduce candidate sets by removing predicates disproven to preconditions:
             \State $C' \gets \left\{ c \setminus D \; | \; c \in C' \right\}$
 
-            \State Set s
+            \State Add singleton sets from $C$ to $K$:
             \State $K' \gets K \cup \left\{ p \; | \; \{ p \} \in C' \right\}$
 
             \State Remove candidate sets containing predicates proven to be preconditions:
@@ -63,7 +61,7 @@ As discussed previously, any candidate set containing a predicate which have alr
             % \State Remove candidate sets from $C$ which contain a predicate in $K^\pm$
             % \Comment \emph{see \eqref{eq:removeKnown}}
             \State \Return $(K', D', C')$
-        \EndFunction
+        \EndFunction%
     \end{algorithmic}
 \end{algorithm}
 
