--- a/Conditional/DifficulitiesLearningConditionEffects.tex
+++ b/Conditional/DifficulitiesLearningConditionEffects.tex
@@ -13,7 +13,7 @@ This is important as we now have an initial assumption of possible predicates fo
 
 %\subsubsection{Limitations}
 In order to simplify the problem we have made the following restrictions on conditional effects we can learn:
-\begin{enumerate}
+\begin{enumerate}[label=R.\arabic*]
 	\item Environment must be fully observable.
 	\item Environment must contain a finite number of objects.
 	\item \label{rst:ca:no-disjuntive-conditionals} No disjunctive preconditions or effects.
