--- a/Master.tex
+++ b/Master.tex
@@ -15,6 +15,7 @@
 \usepackage{hyperref}
 \usepackage[ampersand]{easylist}
 \usepackage{subcaption}
+\usepackage{enumitem}
 
 \hypersetup{
     colorlinks,
