--- a/Learning/PDDLAlgorithm.tex
+++ b/Learning/PDDLAlgorithm.tex
@@ -1,6 +1,9 @@
 \documentclass[../Master.tex]{subfiles}
 \begin{document}
-<TODO: Better introduction to PDDL learning>
+<\texttt{TODO}: Better introduction to PDDL learning>
+
+<\texttt{TODO}: Correlate with Sokoban, give examples>
+
 In this report, the primary focus will be on agents learning PDDL action specifications in a static environment.
 
 In such an environment, a number of actions that the agent can perform are available, each accepting a fixed number of objects in the world as parameters. Upon execution of an action in the world, a new world is returned, reflecting the changes made by action execution. The configuration of the world can be observed as a PDDL state.
