--- a/NonConditional.tex
+++ b/NonConditional.tex
@@ -3,7 +3,10 @@
 
 <TODO: Introduction, explaining what non-conditional learning is about and what the structure of the section will be>
 
-For an action schema $A$, $\mathbb{P}_A$ is the set of all fluent predicates in the domain that can be applied with the arguments of $A$.
+For an action schema $A$, $\mathbb{P}_A$ is the set of all fluent predicates in the domain that can be applied with the arguments of $A$. Typically, the grounded version of an action schema $A$ is denoted $a$.
+
+The actual preconditions of an action schema $A$ is denoted $Pre$ or $preconds$ or similarly (To Thomas: we are going to normalize this). Functions which accepts additional parameters (such as grounding, grounding, etc.) are normally written without these, if they are obvious from the context.
+
 \[
 \mathbb{P}_A = \left\{
 p \left( x_1, \dots, x_{|p|} \right)
