--- a/Learning/Strategy.tex
+++ b/Learning/Strategy.tex
@@ -20,13 +20,13 @@
 
 
 
-    \section*{Learning Strategies} \label{sec:strats}
+    \section*{Learning Strategies}\label{sec:strats}
 
     Learning is a gradual process of trial and error, testing and analysis.
     In the initial state of an agent it will know nothing, thus it must
     test and try in order to understand what it is capable of. Furthermore, because an agent has limited resources it cannot test everything it must decide what to test and what to accept remaining ignorant about, we define these as the learning strategies of an agent.
 
-    In our analysis of agent learning strategies we have found there are different traits that exists between all strategies, and some of the traits do tend to oppose each other thus by looking at the extreme cases we can get an understanding of where they are useful and in what situations. In the {[}Walsh paper{]} two such strategies are provided:
+	In our analysis of agent learning strategies we have found there are different traits that exists between all strategies, and some of the traits do tend to oppose each other thus by looking at the extreme cases we can get an understanding of where they are useful and in what situations. In~\cite{Walsh2008} two such strategies are provided:
     \begin{itemize}
     \item An \emph{optimistic} strategy, that will always assume all actions
     does as much as possible thus a plan can always be found.
@@ -69,9 +69,9 @@
     	 Obviously this is a dangerous and is inadvisable. 
     	 A more preferable approach would be to look through the manuals or receive guidance.
     \end{example}
-	By labelling the traits unique to learning strategies we can now apply them to the learning strategies which are provided in {[}Walsh paper{]} as part of the algorithm. Furthermore we can also define new strategies which use a different mixture of the traits:
+	By labelling the traits unique to learning strategies we can now apply them to the learning strategies which are provided in~\cite{Walsh2008} as part of the algorithm. Furthermore we can also define new strategies which use a different mixture of the traits:
     \begin{example}
-	    [{Optimisic}] The \emph{optimistic} strategy as described in {[}Walsh paper{]} assumes that actions
+		[{Optimisic}] The \emph{optimistic} strategy as described in~\cite{Walsh2008} assumes that actions
 	    can always be applied (unless proven otherwise) and contain \emph{all}
 	    positive effects (unless proven otherwise). Using this strategy, a
 	    plan can always be found (unless action schemas or goals have negative
