--- a/Conditional/HyperGraphConstructionFromState.tex
+++ b/Conditional/HyperGraphConstructionFromState.tex
@@ -16,4 +16,8 @@ For each effect with the same predicate form (ie. $p(x,y)$ has the same form as 
 
 Then merge the resulting hypergraphs with prior knowledge (which is also a hypergraph).
 
+When a conditional action fails:
+
+As for non-conditional actions, all predicates present in the state could have caused the conditional to fail if they were negative preconditions, and all predicates not in the state could have caused the failure if they were positive preconditions.
+
 \end{document}
