Fixed warnings, missing refs

--- a/Conditional/HyperGraphConstructionFromState.tex
+++ b/Conditional/HyperGraphConstructionFromState.tex
@@ -18,6 +18,8 @@ Then merge the resulting hypergraphs with prior knowledge (which is also a hyper
 
 When a conditional action fails:
 
-As for non-conditional actions, all predicates present in the state could have caused the conditional to fail if they were negative preconditions, and all predicates not in the state could have caused the failure if they were positive preconditions.
+As for non-conditional actions, we will introduce the notion of a candidate set for proving preconditions. In contrast to non-conditional actions, the preconditions we wish to prove are bindings between variables. 
+
+Whenever a conditional effect fails, the 
 
 \end{document}
