--- a/Conditional/HyperGraphMergingAlgorithm.tex
+++ b/Conditional/HyperGraphMergingAlgorithm.tex
@@ -141,7 +141,7 @@ Although intersecting binding edges by vertex names is an appealing method, it i
 
 	From these patterns, it is clear that $H_1$ is not the correct precondition, as it would have prevented the effect $q\left(o_3\right)$. However, $H_2$ is flexible enough to allow the effect $q\left(o_1\right)$ under the interpretation $\left\{ x = o_1, y = z = o_2 \right\}$. In other words, it might be the case that the effect $q(x)$ requires to be connected to two $p$-predicates, although this was not visible for $H_1$ as the $p$-predicates happened to be identical.
 
-    \begin{figure} \label{fig:ex:ca:hgma:ex:generalization}
+    \begin{figure}
         \centering
         \begin{subfigure}[b]{0.4\textwidth}
             \centering
@@ -156,7 +156,7 @@ Although intersecting binding edges by vertex names is an appealing method, it i
             \caption{$H_2$}
             \label{fig:ex:ca:hgma:ex:generalization2}
         \end{subfigure}
-		\caption{Hypergraphs for example~\ref{ex:ca:hgma:generalization}}
+		\caption{Hypergraphs for example~\ref{ex:ca:hgma:generalization}}\label{fig:ex:ca:hgma:ex:generalization}
     \end{figure}
 
 \end{example}
