--- a/Learning.tex
+++ b/Learning.tex
@@ -5,13 +5,13 @@
 \section{Strategy}
     \subfile{Learning/Strategy}
 \section{Algorithm}
-    \subfile{Learning/Algorithm}
+    \subfile{Learning/Algorithm}\label{sec:Algorithm}
 
 \section{PDDL}
 <TODO: Explain how a world can be modeled as predicates (PDDL)>
 
 \section{Sokoban in PDDL}
-    \subfile{Learning/SokobanPDDL}
+    \subfile{Learning/SokobanPDDL}\label{sec:SokobanPDDL}
 
 
 
