--- a/Learning/Algorithm.tex
+++ b/Learning/Algorithm.tex
@@ -18,8 +18,8 @@ The derived algorithm presented in figure~\ref{algo:science} takes as input a qu
 
 In the following we will elaborate on the types and functions used in the algorithmization of the scientific method, and their relevance to learning.
 
-\begin{algorithm}\label{algo:science}
-    \caption{Abstract learning algorithm based on the scientific method.}
+\begin{algorithm}
+    \caption{Abstract learning algorithm based on the scientific method.}\label{algo:science}
 
     \begin{algorithmic}
         \Function~{$\textsc{Learn}$} {\texttt{Question} $q$, \texttt{Strategy} $s$, \texttt{Knowledge} $k$, \texttt{World} $w$}
