--- a/NonConditional.tex
+++ b/NonConditional.tex
@@ -17,10 +17,10 @@ p \left( x_1, \dots, x_{|p|} \right)
 
 (TO Thomas: Also note we use $U$ for unproven predicates, $D$ for disproven predicates and $K$ for proven predicates, )
 
-\section{Learning effects (Major rewrite required/Add examples/Add theorems/Use disproven etc../ all in all a dated file )}
+\section{Learning effects (Major rewrite required/Add examples/Add theorems/Use disproven etc../ all in all a dated file )} \label{sec:NC:Effects}
     \subfile{NonConditional/Effects}
 
-\section{Learning Preconditions}
+    \section{Learning Preconditions}\label{sec:NC:Preconditions}
     \subfile{NonConditional/Preconditions}
 
 \section{Hypothesis construction}
