--- a/NonConditional/Preconditions.tex
+++ b/NonConditional/Preconditions.tex
@@ -36,7 +36,7 @@ In the following we will analyse how the aforementioned predicate sets can be de
         \right\}
     \end{equation*}
 
-    From this state, we will analyse the outcomes of different applications of the \texttt{move-h} action (presented in Section~\ref{sec:nc:sokobanExample}), whose preconditions are reprinted below:
+    From this state, we will analyse the outcomes of different applications of the \texttt{move-h} action (presented in Section~\ref{sec:SokobanPDDL}), whose preconditions are reprinted below:
 
     \begin{align*}
         Pre_{\texttt{move-h}}^+ &= \left\{
