--- a/Conditional/CollapsingHypergraphs.tex
+++ b/Conditional/CollapsingHypergraphs.tex
@@ -7,7 +7,7 @@ For all binding sets $b$ of a hypergraph $H$, the following holds:
 
 For any two subsets $b_1$ and $b_2$ of $b$ it holds that: If there exists a vertex transformation function $t$ such that $t\left[b_1\right] \subseteq b_2$, then $b_1$ is redundant, ie. $H$ is equally expressive with or withouth the subgraph described by $b_1$.
 
-\begin{example}\label{fig:ex:ca:hgma:ex:collapsing}
+\begin{example}\label{ex:ca:hgma:ex:collapsing}
 
 	Consider an action $a$ applied in state $s_0$, resulting in state $s_1$:
 	\begin{equation*}
@@ -37,7 +37,7 @@ For any two subsets $b_1$ and $b_2$ of $b$ it holds that: If there exists a vert
 
 	Notice that $H$ and $H'$ are equally restrictive: If, for a given set of objects $O$, and a state $s$, there exists a substitution $\delta_1 : \left\{x, y, z\right\} \rightarrow O$ such that $\delta\left[p(x,y), p(x,z)\right] \vdash s$, then there also exists a substitution $\delta_1 : \left\{x, y\right\} \rightarrow O$ such that $\delta_2\left[p(x,y)\right] \vdash s$
 
-	\begin{figure}\label{fig:ex:ca:hgma:ex:collapsing}
+	\begin{figure}
         \centering
         \hfill
         \begin{subfigure}[b]{0.4\textwidth}
@@ -53,7 +53,7 @@ For any two subsets $b_1$ and $b_2$ of $b$ it holds that: If there exists a vert
             \caption{Hypergraph $H$ after collapsing.}
             \label{fig:ex:ca:hgma:ex:isomorphicReduced}
         \end{subfigure}
-		\caption{Hyperrgaphs for example~\ref{fig:ex:ca:hgma:ex:collapsing}}
+		\caption{Hyper graphs for example~\ref{fig:ex:ca:hgma:ex:collapsing}}\label{fig:ex:ca:hgma:ex:collapsing}
         \hfill
     \end{figure}
 \end{example}
